add_executable(AdventOfCode2021 
main.cpp 
DayOneSolver.cpp
DayTwoSolver.cpp
DayThreeSolver.cpp
DayFourSolver.cpp
DayFiveSolver.cpp
DaySixSolver.cpp
DaySevenSolver.cpp
DayEightSolver.cpp
DayNineSolver.cpp
DayTenSolver.cpp
DayElevenSolver.cpp
DayTwelveSolver.cpp
DayThirteenSolver.cpp
DayFourteenSolver.cpp
DayFifteenSolver.cpp
DaySixteenSolver.cpp
DaySeventeenSolver.cpp
DayEighteenSolver.cpp
DayNineteenSolver.cpp
DayTwentySolver.cpp
DayTwentyOneSolver.cpp
DayTwentyTwoSolver.cpp
DayTwentyThreeSolver.cpp
DayTwentyFourSolver.cpp
DayTwentyFiveSolver.cpp
SolverFactory.cpp
)

target_include_directories(AdventOfCode2021 PUBLIC "${ADVENTOFCODE2021_SOURCE_DIR}")